# fractalGenerator

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sim
src/: main.cpp
src/model/: genfrac.cpp  genfrac.hpp
src/view/: gui.cpp  gui.hpp
